syntax = "proto3";

option csharp_namespace = "RequestManagement.Server.Controllers";

service EquipmentService {
    rpc GetAllEquipment (GetAllEquipmentRequest) returns (GetAllEquipmentResponse);
    rpc CreateEquipment (CreateEquipmentRequest) returns (CreateEquipmentResponse);
    rpc UpdateEquipment (UpdateEquipmentRequest) returns (UpdateEquipmentResponse);
    rpc DeleteEquipment (DeleteEquipmentRequest) returns (DeleteEquipmentResponse);
}

message GetAllEquipmentRequest {
    string filter = 1;
}

message GetAllEquipmentResponse {
    repeated Equipment equipment = 1;
}

message CreateEquipmentRequest {
    string name = 1;
    string license_plate = 2;
    string code = 3;
}

message CreateEquipmentResponse {
    int32 id = 1;
}

message UpdateEquipmentRequest {
    int32 id = 1;
    string name = 2;
    string license_plate = 3;
    string code = 4;
}

message UpdateEquipmentResponse {
    bool success = 1;
}

message DeleteEquipmentRequest {
    int32 id = 1;
}

message DeleteEquipmentResponse {
    bool success = 1;
}

message Equipment {
    int32 id = 1;
    string name = 2;
    string license_plate = 3;
    string code = 4;
}